# ukoly_AI_Agents

lekce4/: README.md  db.sql  lekce4.json
lekce_1/: .env.example  main-start.py  pyproject.toml
lekce_9/: .env.example  QUICKSTART.md  README.md  README_SETUP.md  docker-compose.yml  litellm_config.yaml
lekce_9/agent/: analyzer.py  main.py  pdf_generator.py  pyproject.toml  run.sh
lekce_9/mcp_server/: pyproject.toml  run.sh  server.py  test_srcip.py
lekce_9/mcp_server/tools/: __init__.py  opensearch_tool.py  web_search_tool.py
